# gamify

./: README.md  run.bat
client/: .gitignore  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
